# learning_cmake

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: blah.hpp
libs/xmpl/: CMakeLists.txt
libs/xmpl/include/xmpl/: other.hpp  xmpl.hpp
libs/xmpl/src/: other.cpp  xmpl.cpp
src/: main.cpp
